force-app/main/default/objects/DHS_Case_History__c/DHS_Case_History__c.object-meta.xml
<CustomObject>
    <label>Case History</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>Case History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>