force-app/main/default/objects/DHS_Case_History__c/fields/Added_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Added_By_Name__c</fullName>
    <formula>DHS_Added_By__r.FirstName + &apos; &apos; + DHS_Added_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added By Name</label>
    <type>Text</type>
</CustomField>