force-app/main/default/objects/DHS_Case_History__c/fields/DHS_Added_By__c.field-meta.xml
<CustomField>
    <fullName>DHS_Added_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Added By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_Case_History</relationshipName>
    <type>Lookup</type>
</CustomField>